--- a/client/styles/globals.css
+++ b/client/styles/globals.css
@@ -14,9 +14,23 @@ a {
     box-sizing: border-box;
 }
 
+p {
+    margin: 0;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h5 {
+    margin: 0px;
+}
+
 table {
     border-collapse: collapse;
     border: none;
+    width: 100%;
 }
 
 thead .ascending::after {
@@ -33,19 +47,28 @@ thead .descending::after {
 
 td,
 th {
-    padding: 3px 10px;
+    padding: 7px 10px;
 }
 
-tr:nth-child(even) {
+td {
+    border-top: 1px solid #dee2e6
+}
+
+
+/* tr:nth-child(even) {
     background-color: #f2f2f2;
-}
+} */
 
-tr:hover {
-    background-color: #e8e8e8;
+tr {
+    background-color: #fff;
 }
 
 th {
     text-align: left;
-    background-color: #04AA6D;
-    color: white;
+    background-color: #f9f9f9;
+    border-bottom: 1px solid #dee2e6;
+}
+
+.actions svg {
+    cursor: pointer;
 }
