--- a/client/styles/globals.css
+++ b/client/styles/globals.css
@@ -31,6 +31,7 @@ table {
     border-collapse: collapse;
     border: none;
     width: 100%;
+    overflow: auto;
 }
 
 thead .ascending::after {
@@ -54,13 +55,14 @@ td {
     border-top: 1px solid #dee2e6
 }
 
-
-/* tr:nth-child(even) {
-    background-color: #f2f2f2;
-} */
-
 tr {
     background-color: #fff;
+}
+
+thead {
+    position: sticky;
+    top: 0;
+    z-index: 10;
 }
 
 th {
